--- a/decentralized-social-media-app/package.json
+++ b/decentralized-social-media-app/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ethers": "^5.7.2",
+    "firebase": "^9.15.0",
     "framer-motion": "^7.6.9",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
